--- a/app/src/main/res/layout/stats.xml
+++ b/app/src/main/res/layout/stats.xml
@@ -37,33 +37,33 @@
     <android.support.percent.PercentRelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0">
 
         <ScrollView
-            app:layout_widthPercent="70%"
-            app:layout_heightPercent="70%"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintHorizontal_bias="0.494"
-            app:layout_constraintVertical_bias="0.909"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.494"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.909"
+            app:layout_heightPercent="70%"
+            app:layout_widthPercent="70%">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -71,18 +71,26 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/totalmoney"
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
-                    android:textColor="#ffffff"
-                    android:text="@string/monthly_expenses"/>
+                    android:text="@string/money"
+                    android:textColor="#ffffff" />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/moneyspent"
                     android:layout_width="match_parent"
                     android:layout_height="240dp"
-                    android:text="@string/loan_plan"
+                    android:text="@string/money_spent"
                     android:textColor="#ffffff" />
+
+                <TextView
+                    android:id="@+id/choicesNum"
+                    android:layout_width="match_parent"
+                    android:layout_height="240dp"
+                    android:text="@string/num_choices"
+                    android:textColor="#ffffff" />
+
             </LinearLayout>
         </ScrollView>
 
