--- a/app/src/main/res/layout/decision_history.xml
+++ b/app/src/main/res/layout/decision_history.xml
@@ -62,9 +62,11 @@
             app:layout_constraintVertical_bias="0.909"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:id="@+id/decisionScrollView">
 
             <LinearLayout
+                android:id="@+id/scrollLinear"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -73,13 +75,15 @@
                     android:id="@+id/textView7"
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textColor="#ffffff" />
 
                 <TextView
                     android:id="@+id/textView6"
                     android:layout_width="match_parent"
                     android:layout_height="240dp"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textColor="#ffffff" />
             </LinearLayout>
         </ScrollView>
 
