--- a/app/src/main/res/layout/stats.xml
+++ b/app/src/main/res/layout/stats.xml
@@ -77,44 +77,53 @@
                     android:layout_width="match_parent"
                     android:layout_height="42dp"
                     android:text="@string/money"
-                    android:textColor="#ffffff" />
+                    android:textColor="#ffffff"
+                    android:textSize="21sp"
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/NumMoney"
+                    android:id="@+id/tot_money"
                     android:layout_width="match_parent"
-                    android:layout_height="123dp"
+                    android:layout_height="120dp"
                     android:text="100"
-                    android:textColor="#ffffff" />
+                    android:textColor="#ffffff"
+                    android:textSize="21sp" />
 
                 <TextView
                     android:id="@+id/moneyspent"
                     android:layout_width="match_parent"
-                    android:layout_height="44dp"
+                    android:layout_height="42dp"
                     android:text="@string/money_spent"
-                    android:textColor="#ffffff" />
+                    android:textColor="#ffffff"
+                    android:textSize="21sp"
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/Numspent"
+                    android:id="@+id/spent_money"
                     android:layout_width="256dp"
-                    android:layout_height="137dp"
+                    android:layout_height="120dp"
                     android:text="0"
                     android:textColor="#ffffff"
                     tools:layout_editor_absoluteX="8dp"
-                    tools:layout_editor_absoluteY="-414dp" />
+                    tools:layout_editor_absoluteY="-414dp"
+                    android:textSize="21sp" />
 
                 <TextView
                     android:id="@+id/choicesNum"
                     android:layout_width="match_parent"
-                    android:layout_height="43dp"
+                    android:layout_height="42dp"
                     android:text="@string/num_choices"
-                    android:textColor="#ffffff" />
+                    android:textColor="#ffffff"
+                    android:textSize="21sp"
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/Numchoices"
+                    android:id="@+id/num_choices"
                     android:layout_width="match_parent"
-                    android:layout_height="127dp"
+                    android:layout_height="120dp"
                     android:text="0"
-                    android:textColor="#ffffff" />
+                    android:textColor="#ffffff"
+                    android:textSize="21sp" />
 
             </LinearLayout>
         </ScrollView>
